# yolov8_seg_xianyu

./: usercmd.sh
examples/yolov8_seg/cpp/: CMakeLists.txt  main.cc  main2.cc  postprocess.h
examples/yolov8_seg/cpp/rknpu2/: postprocess.cc
